# oaas

./: .gitignore  CLAUDE.md  DEPLOYMENT_READY.md  LAYER_TESTING_COMPLETE.md  OBFUSCATION_COMPLETE.md  OLLVM_INTEGRATION_FIX.md  PLUGIN_PACKAGING_PLAN.md  README.md  demo_pgrm_13_reports.md  docker-compose.yml  pytest.ini  requirements-dev.txt  setup.cfg  test_all_layers.sh
.github/workflows/: deploy.yml  dockerhub-deploy.yml  jotai-tests.yml
binary_obfuscation_pipeline/mcsema_impl/ghidra_lifter/: Dockerfile
binary_obfuscation_pipeline/mcsema_impl/ghidra_lifter/lifter_script/: export_cfg.py  json_to_mcsema.py  lifter_service.py
binary_obfuscation_pipeline/mcsema_impl/mcsema_lift/: Dockerfile  lift_service.py
cmd/llvm-obfuscator/: Dockerfile.backend  MANIFEST.in  README.md  build_plugins.sh  package.sh  setup.py
cmd/llvm-obfuscator/api/: server.py
cmd/llvm-obfuscator/cli/: obfuscate.py
cmd/llvm-obfuscator/core/: __init__.py  binary_pipeline_worker.py  config.py  multifile_compiler.py  obfuscator.py  report_converter.py  reporter.py  string_encryptor.py  symbol_obfuscator.py  utils.py
cmd/llvm-obfuscator/frontend/: Dockerfile.frontend  vite.config.ts
cmd/llvm-obfuscator/frontend/src/: App.tsx  index.css  main.tsx
cmd/llvm-obfuscator/plugins/: NOTICE
cmd/llvm-obfuscator/plugins/linux-x86_64/: clang  opt  (+1 more)
cmd/llvm-obfuscator/test_autodetect/: simple_auth  simple_auth.json
cmd/llvm-obfuscator/test_autodetect2/: simple_auth  simple_auth.json
cmd/llvm-obfuscator/test_cli_layer1/: factorial_recursive  factorial_recursive.json  factorial_recursive_string_encrypted.c
cmd/llvm-obfuscator/test_cli_output/: simple_auth  simple_auth.json
cmd/llvm-obfuscator/test_layer0/: simple_auth.json  simple_auth_symbol_obfuscated.c  symbol_map.json
cmd/llvm-obfuscator/test_layer2/: simple_auth.json
cmd/llvm-obfuscator/test_layer2_all/: simple_auth  simple_auth.json
cmd/llvm-obfuscator/test_layer3/: simple_auth_string_encrypted.c
cmd/llvm-obfuscator/tests/: test_symbol_obfuscation.py
docs/: OBFUSCATION_TEST_SUITE_GUIDE.md  POLYGEIST_COMPLETE_GUIDE.md  PRODUCTION_HOTFIX_LOG.md  SPEC_CPU_GUIDE.md
sh/: apply_all_17_techniques.sh  build_all_ultimate.sh  obfuscate_all_examples.sh  obfuscate_and_test_all.sh  radare2_analysis.sh
src/: crypto_wallet.cpp  simple_auth.c  simple_auth_encrypted.c  simple_license.c
symbol-obfuscator/: CMakeLists.txt  symbol_map.json
symbol-obfuscator/examples/: license_validator.c  simple_auth.cpp
symbol-obfuscator/passes/: SymbolObfuscationPass.cpp  SymbolObfuscationPass.h
symbol-obfuscator/src/: c_obfuscator.cpp  c_obfuscator.h  cpp_mangler.cpp  cpp_mangler.h  crypto_hasher.cpp  crypto_hasher.h
symbol-obfuscator/tests/: test_obfuscation.sh
symbol-obfuscator/tools/: symbol-obfuscate.cpp
targeted-obfuscator/transforms/: cfg_flattener.py  opaque_predicates.py
test_cli_complete/: demo_auth_200.json  demo_license_200  demo_license_200.json
test_cli_complete/cpp_enhanced/: demo_license_200  demo_license_200.json  demo_license_200_string_encrypted.cpp
test_cli_complete/cpp_final/: demo_license_200.json  demo_license_200_string_encrypted.cpp
test_cli_complete/cpp_fixed/: demo_license_200_string_encrypted.cpp
test_cli_complete/preset_maximum/: demo_auth_200.json
test_cli_complete/preset_standard/: demo_auth_200.json
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_utils.py
(+5 files in other folders)
