[metadata]
name = oaas
version = 1.0.0
description = LLVM Binary Obfuscator - Production-ready multi-layer code obfuscation toolkit
author = OAAS Team
license = MIT

[options]
python_requires = >=3.10

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
markers =
    unit: Unit tests (fast, no external dependencies)
    integration: Integration tests (may require external tools)
    slow: Slow tests that take more than 5 seconds

[coverage:run]
source = cmd/llvm-obfuscator/core
omit =
    */tests/*
    */__pycache__/*
    */venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
